Fix RoyaleVision v6.1 capture and tracking regressions